# google-io-extended-2023-seoul-presentation

./: .gitignore  README.md
govulncheck/: Makefile  go.mod  go.sum
govulncheck/hook/: pre-commit
pyvulncheck/: main.py  pyproject.toml  requirements.txt
pyvulncheck/custom/: __init__.py  types.py
pyvulncheck/util/: __init__.py  parser.py  pyvulncheck.py
